# pipecat-flow-voice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dev-requirements.txt  env.example  index.html  jsdoc.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: deploy.yml  publish-pypi.yml  publish-test.yml  test.yml
backend/: api.py  main.py  models.py  templates.py  validation.py
backend/tests/: test_import.py  test_templates.py  test_validation.py
css/: style.css
editor/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.cjs  vercel.json  vite.config.js
editor/.github/workflows/: deploy.yml
editor/css/: tailwind.css
editor/examples/: food_ordering.json  movie_booking.json  movie_explorer.json  patient_intake.json  restaurant_ordering.json  restaurant_reservation.json  travel_planner.json
editor/js/: main.js  types.js
editor/js/editor/: canvas.js  sidePanel.js  toolbar.js
editor/js/nodes/: baseNode.js  endNode.js  flowNode.js  functionNode.js  index.js  mergeNode.js  startNode.js
editor/js/utils/: export.js  import.js  validation.js
examples/: food_ordering.json  food_ordering.py  movie_booking.py  movie_explorer.py  movie_explorer_anthropic.py  movie_explorer_gemini.py  patient_intake.py  restaurant_reservation.py  runner.py  travel_planner.py  travel_planner_gemini.py
examples/assets/hold_music/: hold_music.py
examples/dynamic/: insurance_anthropic.py  insurance_aws_bedrock.py  insurance_gemini.py  insurance_openai.py  restaurant_reservation.py  restaurant_reservation_direct_functions.py  warm_transfer.py
examples/dynamic/food-ordering/: restaurant_ordering.py
examples/static/: food_ordering.py  food_ordering_direct_functions.py  movie_explorer_anthropic.py  movie_explorer_gemini.py  movie_explorer_openai.py  patient_intake.py  patient_intake_anthropic.py  patient_intake_aws_bedrock.py  patient_intake_gemini.py  patient_intake_openai.py  restaurant_reservation.py  travel_planner.py  warm_transfer.py
frontend/: package-lock.json  package.json  server.py
frontend/public/: index.html
frontend/public/css/: style.css
frontend/public/js/: main.js
js/: main.js  types.js  validation.js
js/editor/: canvas.js  editorState.js  sidePanel.js  toolbar.js
js/nodes/: baseNode.js  endNode.js  flowNode.js  functionNode.js  index.js  mergeNode.js  startNode.js
js/utils/: export.js  helpers.js  import.js  validation.js
pipecat_flows/: README.md  __init__.py  manager.py
src/pipecat_ai_flows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pipecat_flows/: README.md  __init__.py  actions.py  adapters.py  config.py  exceptions.py  formats.py  manager.py  state.py  types.py
tests/: __init__.py  test_actions.py  test_adapters.py  test_context_strategies.py  test_flows_direct_functions.py  test_flows_functions.py  test_helpers.py  test_manager.py  test_state.py
